--- a/main/index.html
+++ b/main/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>劲爆淋堂</title>
     <meta http-equiv="Access-Control-Allow-Origin" content="*">
-    <img id="photo" style ="display:none" src="../image/超越德文.png">
+    <img id="photo" style ="display:none" src="../image/陈乾.jpg">
     <script src="onbeat.js"></script>
     <script src="bpm.js"></script>
     <script src="pixi.js"></script>
