--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<iframe src="main/index.html">
+<iframe src="main/index.html" width="1060" height="760">
 <p>
     &lt;iframe key=&quot;game&quot; path=&quot;/ltv4/index.html&quot; width=&quot;1060&quot; height=&quot;760&quot; /&gt;
 </p>
